# AURA

./: .gitignore  AGENTS.md  BUILD.md  llms-full.txt  llms.txt  render.yaml
android/: build.gradle.kts  gradle.properties  gradlew  gradlew.bat  local.defaults.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
docs/: README.md
docs/adrs/: 001-machine-friendly-docs.md  002-android-native-client.md  003-backend-fastapi-supabase-qdrant.md  004-provider-adapter-strategy.md  005-mcp-bridge.md  006-online-search-backend-only.md
docs/android/: app-architecture.md  local-persistence.md  navigation.md  room-relationships.md  room-schema.md
docs/documentation/: style-guide.md
docs/domain/: data-relationships.md  entities.md  playback-model.md  (+2 more)
infra/: README.md  docker-compose.local.yml  docker-compose.vps.caddy.yml  docker-compose.vps.yml
server/: .env.example  README.md  pyproject.toml
server/app/: __init__.py  config.py  main.py
server/app/api/: router.py
server/app/api/routes/: albums.py  artists.py  health.py  resolve.py  search.py
server/app/core/: __init__.py  aura_id_codec.py  id_generator.py
server/app/db/migrations/: 001_create_catalog_tables.sql
server/app/domain/: __init__.py  models.py
server/app/providers/: __init__.py
server/app/providers/deezer/: __init__.py  adapter.py  client.py  exceptions.py
server/app/schemas/: __init__.py  responses.py
server/app/services/: __init__.py  album_service.py  artist_service.py  exceptions.py  resolve_service.py  search_service.py
supabase/: README.md
(+92 files in other folders)
